--- a/0/theme/css/sprite.css
+++ b/0/theme/css/sprite.css
@@ -1,170 +1,4 @@
-/***** CHILD.CSS START *****/
-
-.child-updated { background: #180923; }
-
-/*** COLOR START ***/
-
-body { border: 1px solid #999; }
-
-.title-wrap { background-color: #93c47d; }
-
-.site-title, .site-description { color: #efefef; }
-
-.site-title { text-shadow: 2px -1px 2px #134f5c; }
-
-.site-description { text-shadow: 1px 1px 1px #134f5c; }
-/* faded sky blue */
-
-.site-header { border-bottom: 1px solid #999; }
-
-.site-header-sub { border-bottom: 1px solid #999; }
-
-.spacer-header { border-bottom: #777 solid 4px; }
-
-.spacer-header-bottom { box-shadow: 0 1px 2px rgba(50, 50, 50, 1.0); }
-
-.spacer-footer-top {
-	border-top: #777 solid 4px;
-	box-shadow: 1px 1px 2px rgba(50, 50, 50, 1.0);
-}
-
-.active { background: #e0e0e0; }
-
-.inactive {	background: #eee; }
-
-.core .border { background: #a2c4c9; }
-
-.alt .border { background: #ffd966; }
-
-.unit .border {
-	border: #777 solid 4px;
-	box-shadow: 1px 1px 3px rgba(50, 50, 50, 1.0);
-}
-
-.boxes .unit .inner { box-shadow: inset 1px 1px 3px rgba(50, 50, 50, 1.0); }
-
-.boxes > .line > .unit > .inner { border: 1px solid #c8c8c8; }
-
-/*** COLOR END ***/
-
-/*** BOXES START ***/
-
-.boxes {
-	overflow: hidden;
-	margin-bottom: 20px;
-}
-
-.boxes a { border-bottom: none; }
-
-.boxes h2, .boxes h3 { text-align: center; }
-
-.boxes h2 { font-size: 100%; }
-
-.boxes h3 { font-size: 80%; }
-
-.boxes > .line > .unit:last-child { margin-bottom: 0; }
-
-.boxes > .line > .unit > .inner {
-	margin: 5px;
-	overflow: hidden;
-}
-
-.boxes .unit .inner { padding: 5px; }
-
-.boxes h2 {
-	clear: both;
-	text-align: center;
-	font-family: sans-serif;
-	padding-top: 10px;
-	opacity: .8;
-}
-
-.boxes .unit h2 { margin: 0; }
-
-/*** BOXES END ***/
-
-/*** BORDER RADIUS START ***/
-
-.boxes .unit .border { border-radius: 7px; }
-.boxes .unit .inner { border-radius: 3px; }
-.boxes > .line > .unit > .inner { border-radius: 4px; }
-
-/*** BORDER RADIUS END ***/
-
-/*** OTHER START ***/
-
-/*
-.title-wrap {
-	background-image: url('/0/theme/image/uni-village-logo-95x95.png');
-	background-repeat: no-repeat;
-	background-size: 95px;
-	background-position: 18px center;
-}
-*/
-
-h1 { text-align: center; }
-
-.community .unit a { font-weight: bold; }
-
-iframe {
-	display: block;
-	margin: 0 auto;
-}
-
-p.date { font-size: 80%; }
-
-/*** OTHER END ***/
-
-/*** MISC START ***/
-
-.what h3 { display: none; }
-
-.spacer { margin-bottom: 20px; }
-
-/* Survey Monkey Embedded Survey Form */
-.smcx-embed {
-	display: block !important;
-	margin: 0 auto !important;
-}
-
-/*** MISC END ***/
-
 /*** SPRITE START ***/
-
-.icon {
-	background: transparent url('/0/theme/icon/cluster-sprite.png') no-repeat;
-	background-size: 560px;
-	display: inline-block;
-	vertical-align: middle;
-	width: 35px;
-	height: 35px;
-	line-height: 35px;
-	margin-right: 5px;
-	opacity: 0.85;
-	background-position: 25px 25px;
-}
-
-.sprite .unit h2 {
-	margin: 0;
-	padding: 0;
-	display: inline-block;
-	vertical-align: middle;
-	line-height: 35px;
-}
-
-.sprite .unit h3 {
-	margin: 0;
-	display: inline-block;
-	vertical-align: middle;
-	line-height: 35px;
-}
-
-.sprite .unit a {
-	height: 35px;
-	line-height: 35px;
-	display: inline-block;
-	vertical-align: middle;
-}
 
 /**
  * Sprite.
@@ -179,6 +13,8 @@ p.date { font-size: 80%; }
 
 /**
  * I. Who (First Block Left / First Block Top)
+ *
+ * Lines 18 ~ 100
  */
 
 .sprite .icon8x1, .center .icon { background-position: -245px 0; }
@@ -267,6 +103,8 @@ p.date { font-size: 80%; }
 
 /**
  * II. What
+ *
+ * Lines 110~200
  */
 
 /* Row 9 (Set 2-1) */
@@ -393,77 +231,48 @@ p.date { font-size: 80%; }
 .sprite .icon8x8, .commons > .icon { background-position: -245px -245px; }
 
 
-
 /* III. Why */
 
+
+/**
+ * Sprite Generic
+ */
+
+.icon {
+	background: transparent url('/0/theme/icon/cluster-sprite.png') no-repeat;
+	background-size: 560px;
+	display: inline-block;
+	vertical-align: middle;
+	width: 35px;
+	height: 35px;
+	line-height: 35px;
+	margin-right: 5px;
+	opacity: 0.85;
+	background-position: 25px 25px;
+}
+
+.sprite .unit h2 {
+	margin: 0;
+	padding: 0;
+	display: inline-block;
+	vertical-align: middle;
+	line-height: 35px;
+}
+
+.sprite .unit h3 {
+	margin: 0;
+	display: inline-block;
+	vertical-align: middle;
+	line-height: 35px;
+}
+
+.sprite .unit a {
+	height: 35px;
+	line-height: 35px;
+	display: inline-block;
+	vertical-align: middle;
+}
 
 .icon-height { height: 35px; }
 
 /*** SPRITE END ***/
-
-/*** TIER 2 (CLUSTER) START ***/
-
-.tier-2 .site-logo {
-	position: absolute;
-}
-
-.tier-2 .site-logo .inner {
-	height: 25px;
-}
-.tier-2 .site-logo img {
-	width: 25px;
-	height: 25px;
-}
-
-.tier-2 .site-header { height: 20px; }
-
-.tier-2 .title-wrap {
-	height: 20px;
-	background-size: 18px;
-	background-position: 5px;
-}
-
-.tier-2 .title-wrap .inner { display: none; }
-
-.tier-2 .site-header-sub {
-	margin-top: 0;
-	height: 75px;
-	text-align: left;
-	vertical-align: middle;
-	line-height: 75px;
-}
-
-.tier-2 .site-header-sub .level-01 {
-	display: inline-block;
-	width: 200px;
-	height: 75px;
-	line-height: 75px;
-	background-color: #777;
-	text-align: center;
-	font-weight: bold;
-	font-size: 120%;
-}
-
-.tier-2 .site-header-sub .level-02 {
-	font-weight: bold;
-	font-size: 110%;
-}
-
-.tier-2 .site-header-sub .level-02 span {
-	display: inline-block;
-}
-
-.tier-2 h1 { display: none; }
-
-.header-height {
-	height: 75px;
-	padding-left: 15px;
-}
-
-.left {
-	float: left;
-}
-
-/*** CLUSTER END ***/
-
-/***** CHILD.CSS END *****/
