--- a/0/theme/css/sprite.css
+++ b/0/theme/css/sprite.css
@@ -16,7 +16,6 @@
  *
  * Lines 18 ~ 100
  */
-
 .sprite .icon8x1, .center .icon { background-position: -245px 0; }
 
 /* First row */
@@ -102,137 +101,158 @@
 .sprite .icon8x8, .commons > .icon { background-position: -245px -245px; }
 
 /**
- * II. What
+ * II. What (Across, then Down).
  *
  * Lines 110~200
  */
 
-/* Row 9 (Set 2-1) */
-.sprite .icon8x2, .nature .icon { background-position: -245px -35px; }
+/* Row 1 (Set 2-1) */
+.sprite .icon9x1, .nature .icon { background-position: -280px -280px; }
 
-/* Row 10 (Set 2-2) */
-.sprite .icon1x10, .building .icon { background-position: 0 -315px; }
+/* Row 2 (Set 2-2) */
+.sprite .icon9x2, .building .icon { background-position: -315px -280px; }
 
-/* Row 11 (Set 2-3) */
-.sprite .icon1x11, .equipment .icon { background-position: 0 -350px; }
+/* Row 3 (Set 2-3) */
+.sprite .icon9x3, .equipment .icon { background-position: -350px -280px; }
 
-/* Row 12 (Set 2-4) */
-.sprite .icon1x12, .supply .icon { background-position: 0 -385px; }
+/* Row 4 (Set 2-4) */
+.sprite .icon9x4, .supply .icon { background-position: -385px -280px; }
 
-/* Row 13 (Set 2-5) */
-.sprite .icon1x13, .information .icon { background-position: 0 -420px; }
+/* Row 5 (Set 2-5) */
+.sprite .icon9x5, .information .icon { background-position: -420px -280px; }
 
-/* Row 14 (Set 2-6) */
-.sprite .icon1x14, .unknown .icon { background-position: 0 -455px; }
+/* Row 6 (Set 2-6) */
+.sprite .icon9x6, .unknown .icon { background-position: -455px -280px; }
 
-/* Row 15 (Set 2-7) */
-.sprite .icon1x15, .unknown .icon { background-position: 0 -490px; }
+/* Row 7 (Set 2-7) */
+.sprite .icon9x7, .unknown .icon { background-position: -490px -280px; }
 
-/* Row 16 (Set 2-8) */
-.sprite .icon1x16, .unknown .icon { background-position: 0 -525px; }
+/* Row 8 (Set 2-8) */
+.sprite .icon9x8, .unknown .icon { background-position: -525px -280px; }
+
 
 /* Generic Icon */
-.sprite .icon16x16, .generic .icon { background-position: -525px -525px; }
+.sprite .icon16x1, .generic .icon { background-position: -525px -525px; }
 
 /**
  * III. How
  */
 
-.sprite .icon8x6, .growth .icon { background-position: -245px -175px; }
-.sprite .icon8x7, .store > .icon { background-position: -245px -210px; }
+/* Row 9 (Set 3-1) */
+.sprite .icon1x9, .standard .icon { background-position: 0 -280px; }
+
+/* Row 10 (Set 3-2) */
+.sprite .icon1x10, .method .icon { background-position: 0 -315px; }
+.sprite .icon2x10, .growth .icon { background-position: -35px -315px; }
+
+/* Row 11 (Set 3-3) */
+.sprite .icon1x11, .project .icon { background-position: 0 -350px; }
+
+/* Row 12 (Set 3-4) */
+.sprite .icon1x12, .communication .icon { background-position: 0 -385px; }
+
+/* Row 13 (Set 3-5) */
+.sprite .icon1x13, .news .icon { background-position: 0 -420px; }
+
+/* Row 14 (Set 3-6) */
+.sprite .icon1x14, .service .icon { background-position: 0 -455px; }
+
+/* Row 15 (Set 3-7) */
+.sprite .icon1x15, .wholesale .icon { background-position: 0 -490px; }
+
+/* Row 16 (Set 3-8) */
+.sprite .icon1x16, .store .icon { background-position: 0 -525px; }
 
 /**
  * IV. Where (Second Block Right / Second Block Down)
  */
 
-.sprite .icon8x1, .center .icon { background-position: -245px 0; }
+/* First row (Start: 9x9). */
+.sprite .icon10x9, .carpentry .icon { background-position: -315px -280px; }
+.sprite .icon11x9, .electrical .icon { background-position: -350px -280px; }
+.sprite .icon12x9, .plumbing .icon { background-position: -385px -280px; }
+.sprite .icon13x9, .mechanical .icon { background-position: -420px -280px; }
+.sprite .icon14x9, .welding .icon { background-position: -455px -280px; }
+.sprite .icon15x9, .masonry .icon { background-position: -490px -280px; }
 
-/* First row */
-.sprite .icon2x1, .carpentry .icon { background-position: -35px 0; }
-.sprite .icon3x1, .electrical .icon { background-position: -70px 0; }
-.sprite .icon4x1, .plumbing .icon { background-position: -105px 0; }
-.sprite .icon5x1, .mechanical .icon { background-position: -140px 0; }
-.sprite .icon6x1, .welding .icon { background-position: -175px 0; }
-.sprite .icon7x1, .masonry .icon { background-position: -210px 0; }
+.sprite .icon9x9, .trade > .icon { background-position: -280px -280px; }
 
-.sprite .icon1x1, .trade > .icon { background-position:  0 0; }
+/* Second row (Start: 9x10). */
+.sprite .icon10x10, .storage .icon { background-position: -315px -315px; }
+.sprite .icon11x10, .baking .icon { background-position: -350px -315px; }
+.sprite .icon12x10, .cooking .icon { background-position: -385px -315px; }
+.sprite .icon13x10, .serving .icon { background-position: -420px -315px; }
+.sprite .icon14x10, .cleanup .icon { background-position: -455px -315px; }
+.sprite .icon15x10, .recycling .icon { background-position: -490px -315px; }
 
-/* Second row */
-.sprite .icon2x2, .storage .icon { background-position: -35px -35px; }
-.sprite .icon3x2, .baking .icon { background-position: -70px -35px; }
-.sprite .icon4x2, .cooking .icon { background-position: -105px -35px; }
-.sprite .icon5x2, .serving .icon { background-position: -140px -35px; }
-.sprite .icon6x2, .cleaning .icon { background-position: -175px -35px; }
-.sprite .icon7x2, .recycling .icon { background-position: -210px -35px; }
-.sprite .icon8x2, .nature .icon { background-position: -245px -35px; }
-
-.sprite .icon1x2, .cafe > .icon { background-position:  0 -35px; }
+.sprite .icon9x2, .cafe > .icon { background-position: -280px -315px; }
 
 /* Third row */
-.sprite .icon2x3, .engineering .icon { background-position: -35px -70px; }
-.sprite .icon3x3, .architecture .icon { background-position: -70px -70px; }
-.sprite .icon4x3, .landscaping .icon { background-position: -105px -70px; }
-.sprite .icon5x3, .permaculture .icon { background-position: -140px -70px; }
-.sprite .icon6x3, .programming .icon { background-position: -175px -70px; }
-.sprite .icon7x3, .robotics .icon { background-position: -210px -70px; }
+.sprite .icon10x11, .engineering .icon { background-position: -315px -350px; }
+.sprite .icon11x11, .architecture .icon { background-position: -350px -350px; }
+.sprite .icon12x11, .landscaping .icon { background-position: -385px -350px; }
+.sprite .icon13x11, .permaculture .icon { background-position: -420px -350px; }
+.sprite .icon14x11, .programming .icon { background-position: -455px -350px; }
+.sprite .icon15x11, .robotics .icon { background-position: -490px -350px; }
 
-.sprite .icon1x3, .applied > .icon { background-position:  0 -70px; }
+.sprite .icon9x11, .applied > .icon { background-position: -280px -350px; }
 
 /* Fourth row */
-.sprite .icon2x4, .piano .icon { background-position: -35px -105px; }
-.sprite .icon3x4, .violin .icon { background-position: -70px -105px; }
-.sprite .icon4x4, .painting .icon { background-position: -105px -105px; }
-.sprite .icon5x4, .sculpture .icon { background-position: -140px -105px; }
-.sprite .icon6x4, .pottery .icon { background-position: -175px -105px; }
-.sprite .icon7x4, .saxophone .icon { background-position: -210px -105px; }
+.sprite .icon10x12, .piano .icon { background-position: -315px -385px; }
+.sprite .icon11x12, .violin .icon { background-position: -350px -385px; }
+.sprite .icon12x12, .painting .icon { background-position: -385px -385px; }
+.sprite .icon13x12, .sculpture .icon { background-position: -420px -385px; }
+.sprite .icon14x12, .pottery .icon { background-position: -455px -385px; }
+.sprite .icon15x12, .saxophone .icon { background-position: -490px -385px; }
 
-.sprite .icon1x4, .arts > .icon { background-position:  0 -105px; }
+.sprite .icon9x12, .arts > .icon { background-position: -280px -385px; }
 
 /* Fifth row */
-.sprite .icon2x5, .mathematics .icon { background-position: -35px -140px; }
-.sprite .icon3x5, .physics .icon { background-position: -70px -140px; }
-.sprite .icon4x5, .chemistry .icon { background-position: -105px -140px; }
-.sprite .icon5x5, .genetics .icon { background-position: -140px -140px; }
-.sprite .icon6x5, .cognition .icon { background-position: -175px -140px; }
-.sprite .icon7x5, .logic .icon { background-position: -210px -140px; }
-.sprite .icon1x5, .academic > .icon { background-position:  0 -140px; }
+.sprite .icon10x13, .mathematics .icon { background-position: -315px -420px; }
+.sprite .icon11x13, .physics .icon { background-position: -350px -420px; }
+.sprite .icon12x13, .chemistry .icon { background-position: -385px -420px; }
+.sprite .icon13x13, .genetics .icon { background-position: -420px -420px; }
+.sprite .icon14x13, .cognition .icon { background-position: -455px -420px; }
+.sprite .icon15x13, .logic .icon { background-position: -490px -420px; }
+
+.sprite .icon16x13, .academic > .icon { background-position: -280px -420px; }
 
 /* Sixth row */
-.sprite .icon2x6, .cultivating .icon { background-position: -35px -175px; }
-.sprite .icon3x6, .planting .icon { background-position: -70px -175px; }
-.sprite .icon4x6, .watering .icon { background-position: -105px -175px; }
-.sprite .icon5x6, .weeding .icon { background-position: -140px -175px; }
-.sprite .icon6x6, .harvesting .icon { background-position: -175px -175px; }
-.sprite .icon7x6, .processing .icon { background-position: -210px -175px; }
-.sprite .icon8x6, .growth .icon { background-position: -245px -175px; }
-.sprite .icon1x6, .gardening > .icon { background-position:  0 -175px; }
+.sprite .icon10x14, .cultivating .icon { background-position: -315px -455px; }
+.sprite .icon11x14, .planting .icon { background-position: -350px -455px; }
+.sprite .icon12x14, .watering .icon { background-position: -385px -455px; }
+.sprite .icon13x14, .weeding .icon { background-position: -420px -455px; }
+.sprite .icon14x14, .harvesting .icon { background-position: -455px -455px; }
+.sprite .icon15x14, .processing .icon { background-position: -490px -455px; }
+
+.sprite .icon9x14, .gardening > .icon { background-position: -280px -455px; }
 
 /* Seventh row */
-.sprite .icon2x7, .analysis .icon { background-position: -35px -210px; }
-.sprite .icon3x7, .writing .icon { background-position: -70px -210px; }
-.sprite .icon4x7, .photography .icon { background-position: -105px -210px; }
-.sprite .icon5x7, .audio .icon { background-position: -140px -210px; }
-.sprite .icon6x7, .video .icon { background-position: -175px -210px; }
-.sprite .icon7x7, .presenting .icon { background-position: -210px -245px; }
+.sprite .icon10x15, .analysis .icon { background-position: -315px -490px; }
+.sprite .icon11x15, .writing .icon { background-position: -350px -490px; }
+.sprite .icon12x15, .photography .icon { background-position: -385px -490px; }
+.sprite .icon13x15, .audio .icon { background-position: -420px -490px; }
+.sprite .icon14x15, .video .icon { background-position: -455px -490px; }
+.sprite .icon15x15, .presenting .icon { background-position: -490px -490px; }
 
-.sprite .icon1x7, .monitoring > .icon { background-position:  0 -210px; }
+.sprite .icon16x15, .monitoring > .icon { background-position: -280px -490px; }
 
 /* Eighth row */
-.sprite .icon2x8, .clothing .icon { background-position: -35px -245px; }
-.sprite .icon3x8, .haircare .icon { background-position: -70px -245px; }
-.sprite .icon4x8, .shoes .icon { background-position: -105px -245px; }
-.sprite .icon5x8, .physio .icon { background-position: -140px -245px; }
-.sprite .icon6x8, .nutrition .icon { background-position: -175px -245px; }
-.sprite .icon7x8, .health .icon { background-position: -210px -245px; }
+.sprite .icon10x16, .clothing .icon { background-position: -315px -525px; }
+.sprite .icon11x16, .hair .icon { background-position: -350px -525px; }
+.sprite .icon12x16, .shoes .icon { background-position: -385px -525px; }
+.sprite .icon13x16, .physio .icon { background-position: -420px -525px; }
+.sprite .icon14x16, .nutrition .icon { background-position: -455px -525px; }
+.sprite .icon15x16, .health .icon { background-position: -490px -525px; }
 
-.sprite .icon1x8, .care > .icon { background-position:  0 -245px; }
+.sprite .icon9x16, .care > .icon { background-position: -280px -525px; }
 
-.sprite .icon8x7, .store > .icon { background-position: -245px -210px; }
+/* Commons */
 .sprite .icon8x8, .commons > .icon { background-position: -245px -245px; }
 
+/* V. WHEN */
 
-/* III. Why */
-
+/* VI. WHY */
 
 /**
  * Sprite Generic
