--- a/0/theme/css/child.css
+++ b/0/theme/css/child.css
@@ -62,6 +62,8 @@ body { border: 1px solid #999; }
 
 .boxes h3 { font-size: 80%; }
 
+.boxes h4 { font-size: 75%; }
+
 .boxes > .line > .unit:last-child { margin-bottom: 0; }
 
 .boxes > .line > .unit > .inner {
@@ -80,6 +82,8 @@ body { border: 1px solid #999; }
 }
 
 .boxes .unit h2 { margin: 0; }
+
+.boxes.vertical a { display: block; }
 
 /*** BOXES END ***/
 
