--- a/0/theme/css/color.css
+++ b/0/theme/css/color.css
@@ -19,7 +19,7 @@
 .resource .color.lighter { background: #d9ead3; }
 .service .color.lighter { background: #a2c4c9; }
 .supply .color.lighter { background: #f9cb9c; }
-.storefront .color.lighter { background: #76a5af; }
+.store .color.lighter { background: #76a5af; }
 
 .download .color.lighter { background: #279f43; }
 
