--- a/0/theme/css/sprite.css
+++ b/0/theme/css/sprite.css
@@ -16,10 +16,9 @@
  *
  * Lines 18 ~ 100
  */
-.sprite .icon8x1, .center .icon { background-position: -525px -280px; }
+.sprite .icon8x1, .center > .icon { background-position: -525px -280px; }
 
 /* First row */
-.sprite .icon1x1, .trade .icon { background-position:  0 0 !important; }
 .sprite .icon2x1, .carpenter .icon { background-position: -35px 0; }
 .sprite .icon3x1, .electrician .icon { background-position: -70px 0; }
 .sprite .icon4x1, .plumber .icon { background-position: -105px 0; }
@@ -27,8 +26,9 @@
 .sprite .icon6x1, .welder .icon { background-position: -175px 0; }
 .sprite .icon7x1, .mason .icon { background-position: -210px 0; }
 
+.sprite .icon1x1, .trade > .icon { background-position:  0 0; }
+
 /* Second row */
-.sprite .icon1x2, .cafe .icon { background-position:  0 -35px !important; }
 .sprite .icon2x2, .storagist .icon { background-position: -35px -35px; }
 .sprite .icon3x2, .baker .icon { background-position: -70px -35px; }
 .sprite .icon4x2, .cook .icon { background-position: -105px -35px; }
@@ -36,8 +36,9 @@
 .sprite .icon6x2, .cleaner .icon { background-position: -175px -35px; }
 .sprite .icon7x2, .recycler .icon { background-position: -210px -35px; }
 
+.sprite .icon1x2, .cafe > .icon { background-position:  0 -35px; }
+
 /* Third row */
-.sprite .icon1x3, .applied .icon { background-position:  0 -70px !important; }
 .sprite .icon2x3, .engineer .icon { background-position: -35px -70px; }
 .sprite .icon3x3, .architect .icon { background-position: -70px -70px; }
 .sprite .icon4x3, .landscaper .icon { background-position: -105px -70px; }
@@ -45,8 +46,9 @@
 .sprite .icon6x3, .programmer .icon { background-position: -175px -70px; }
 .sprite .icon7x3, .roboticist .icon { background-position: -210px -70px; }
 
+.sprite .icon1x3, .applied > .icon { background-position:  0 -70px; }
+
 /* Fourth row */
-.sprite .icon1x4, .arts .icon { background-position:  0 -105px !important; }
 .sprite .icon2x4, .pianist .icon { background-position: -35px -105px; }
 .sprite .icon3x4, .violinist .icon { background-position: -70px -105px; }
 .sprite .icon4x4, .painter .icon { background-position: -105px -105px; }
@@ -54,8 +56,9 @@
 .sprite .icon6x4, .potter .icon { background-position: -175px -105px; }
 .sprite .icon7x4, .saxophonist .icon { background-position: -210px -105px; }
 
+.sprite .icon1x4, .arts > .icon { background-position:  0 -105px; }
+
 /* Fifth row */
-.sprite .icon1x5, .academic .icon { background-position:  0 -140px !important; }
 .sprite .icon2x5, .mathematician .icon { background-position: -35px -140px; }
 .sprite .icon3x5, .physicist .icon { background-position: -70px -140px; }
 .sprite .icon4x5, .chemist .icon { background-position: -105px -140px; }
@@ -63,8 +66,9 @@
 .sprite .icon6x5, .psychologist .icon { background-position: -175px -140px; }
 .sprite .icon7x5, .logician .icon { background-position: -210px -140px; }
 
+.sprite .icon1x5, .academic > .icon { background-position:  0 -140px; }
+
 /* Sixth row */
-.sprite .icon1x6, .gardening .icon { background-position:  0 -175px !important; }
 .sprite .icon2x6, .cultivator .icon { background-position: -35px -175px; }
 .sprite .icon3x6, .planter .icon { background-position: -70px -175px; }
 .sprite .icon4x6, .waterer .icon { background-position: -105px -175px; }
@@ -72,8 +76,9 @@
 .sprite .icon6x6, .harvester .icon { background-position: -175px -175px; }
 .sprite .icon7x6, .processer .icon { background-position: -210px -175px; }
 
+.sprite .icon1x6, .gardening > .icon { background-position:  0 -175px; }
+
 /* Seventh row */
-.sprite .icon1x7, .monitoring .icon { background-position:  0 -210px !important; }
 .sprite .icon2x7, .analyst .icon { background-position: -35px -210px; }
 .sprite .icon3x7, .writer .icon { background-position: -70px -210px; }
 .sprite .icon4x7, .photographer .icon { background-position: -105px -210px; }
@@ -81,14 +86,17 @@
 .sprite .icon6x7, .videographer .icon { background-position: -175px -210px; }
 .sprite .icon7x7, .presenter .icon { background-position: -210px -245px; }
 
+.sprite .icon1x7, .monitoring > .icon { background-position:  0 -210px; }
+
 /* Eighth row */
-.sprite .icon1x8, .care .icon { background-position:  0 -245px !important; }
 .sprite .icon2x8, .clothier .icon { background-position: -35px -245px; }
 .sprite .icon3x8, .hairdresser .icon { background-position: -70px -245px; }
 .sprite .icon4x8, .shoemaker .icon { background-position: -105px -245px; }
 .sprite .icon5x8, .physiotherapist .icon { background-position: -140px -245px; }
 .sprite .icon6x8, .nutritionist .icon { background-position: -175px -245px; }
 .sprite .icon7x8, .healthier .icon { background-position: -210px -245px; }
+
+.sprite .icon1x8, .care > .icon { background-position:  0 -245px; }
 
 /**
  * II. What (Across, then Down).
@@ -97,28 +105,29 @@
  */
 
 /* Row 1 (Set 2-1) */
-.sprite .icon9x1, .nature .icon { background-position: -280px 0 !important; }
+.sprite .icon9x1, .nature > .icon { background-position: -280px 0; }
 
 /* Row 2 (Set 2-2) */
-.sprite .icon9x2, .building .icon { background-position: -280px -35px !important; }
 .sprite .icon10x2, .shelter .icon { background-position: -315px -35px; }
 .sprite .icon11x2, .dwelling .icon { background-position: -385px -35px; }
 .sprite .icon13x2, .workshop .icon { background-position: -420px -35px; }
 
+.sprite .icon9x2, .building > .icon { background-position: -280px -35px; }
+
 /* Row 3 (Set 2-3) */
-.sprite .icon9x3, .equipment .icon { background-position: -280px -70px !important; }
+.sprite .icon9x3, .equipment > .icon { background-position: -280px -70px; }
 
 /* Row 4 (Set 2-4) */
-.sprite .icon9x4, .supply .icon { background-position: -280px -105px !important; }
+.sprite .icon9x4, .supply > .icon { background-position: -280px -105px; }
 
 /* Row 5 (Set 2-5) */
-.sprite .icon9x5, .resource .icon { background-position: -280px -140px !important; }
+.sprite .icon9x5, .resource > .icon { background-position: -280px -140px; }
 
 /* Row 6 (Set 2-6) */
-.sprite .icon9x6, .structure .icon { background-position: -280px -175px !important; }
+.sprite .icon9x6, .structure > .icon { background-position: -280px -175px; }
 
 /* Row 7 (Set 2-7) */
-.sprite .icon9x7, .product .icon { background-position: -280px -210px !important; }
+.sprite .icon9x7, .product > .icon { background-position: -280px -210px; }
 
 /* Row 8 (Set 2-8) */
 .sprite .icon9x8, .unknown .icon { background-position: -280px -245px; }
@@ -132,33 +141,33 @@
  */
 
 /* Row 9 (Set 3-1) */
-.sprite .icon1x9, .standard .icon { background-position: 0 -280px !important; }
+.sprite .icon1x9, .standard > .icon { background-position: 0 -280px; }
 
 /* Row 10 (Set 3-2) */
-.sprite .icon1x10, .method .icon { background-position: 0 -315px !important; }
 .sprite .icon2x10, .growth .icon { background-position: -35px -315px; }
 
+.sprite .icon1x10, .method > .icon { background-position: 0 -315px; }
+
 /* Row 11 (Set 3-3) */
-.sprite .icon1x11, .project .icon { background-position: 0 -350px !important; }
+.sprite .icon1x11, .project > .icon { background-position: 0 -350px; }
 
 /* Row 12 (Set 3-4) */
-.sprite .icon1x12, .service .icon { background-position: 0 -385px !important; }
+.sprite .icon1x12, .service > .icon { background-position: 0 -385px; }
 
 /* Row 13 (Set 3-5) */
-.sprite .icon1x13, .learning .icon { background-position: 0 -420px !important; }
+.sprite .icon1x13, .learning > .icon { background-position: 0 -420px; }
 
 /* Row 14 (Set 3-6) */
-.sprite .icon1x14, .store .icon { background-position: 0 -455px !important; }
+.sprite .icon1x14, .store > .icon { background-position: 0 -455px; }
 
 /* Row 15 (Set 3-7) */
-.sprite .icon1x15, .recovery .icon { background-position: 0 -490px !important; }
+.sprite .icon1x15, .recovery > .icon { background-position: 0 -490px; }
 
 /**
  * IV. Where (Second Block Right / Second Block Down)
  */
 
 /* First row (Start: 9x9). */
-.sprite .icon9x9, .trade .icon { background-position: -280px -280px !important; }
 .sprite .icon10x9, .carpentry .icon { background-position: -315px -280px; }
 .sprite .icon11x9, .electrical .icon { background-position: -350px -280px; }
 .sprite .icon12x9, .plumbing .icon { background-position: -385px -280px; }
@@ -166,8 +175,9 @@
 .sprite .icon14x9, .welding .icon { background-position: -455px -280px; }
 .sprite .icon15x9, .masonry .icon { background-position: -490px -280px; }
 
+.sprite .icon9x9, .trade > .icon { background-position: -280px -280px; }
+
 /* Second row (Start: 9x10). */
-.sprite .icon9x10, .cafe .icon { background-position: -280px -315px !important; }
 .sprite .icon10x10, .storage .icon { background-position: -315px -315px; }
 .sprite .icon11x10, .baking .icon { background-position: -350px -315px; }
 .sprite .icon12x10, .cooking .icon { background-position: -385px -315px; }
@@ -175,10 +185,9 @@
 .sprite .icon14x10, .cleanup .icon { background-position: -455px -315px; }
 .sprite .icon15x10, .recycling .icon { background-position: -490px -315px; }
 
+.sprite .icon9x10, .cafe > .icon { background-position: -280px -315px; }
 
 /* Third row */
-
-.sprite .icon9x11, .applied .icon { background-position: -280px -350px !important; }
 .sprite .icon10x11, .engineering .icon { background-position: -315px -350px; }
 .sprite .icon11x11, .architecture .icon { background-position: -350px -350px; }
 .sprite .icon12x11, .landscaping .icon { background-position: -385px -350px; }
@@ -186,8 +195,9 @@
 .sprite .icon14x11, .programming .icon { background-position: -455px -350px; }
 .sprite .icon15x11, .robotics .icon { background-position: -490px -350px; }
 
+.sprite .icon9x11, .applied > .icon { background-position: -280px -350px; }
+
 /* Fourth row */
-.sprite .icon9x12, .arts .icon { background-position: -280px -385px !important; }
 .sprite .icon10x12, .piano .icon { background-position: -315px -385px; }
 .sprite .icon11x12, .violin .icon { background-position: -350px -385px; }
 .sprite .icon12x12, .painting .icon { background-position: -385px -385px; }
@@ -195,8 +205,9 @@
 .sprite .icon14x12, .pottery .icon { background-position: -455px -385px; }
 .sprite .icon15x12, .saxophone .icon { background-position: -490px -385px; }
 
+.sprite .icon9x12, .arts > .icon { background-position: -280px -385px; }
+
 /* Fifth row */
-.sprite .icon16x13, .academic .icon { background-position: -280px -420px !important; }
 .sprite .icon10x13, .mathematics .icon { background-position: -315px -420px; }
 .sprite .icon11x13, .physics .icon { background-position: -350px -420px; }
 .sprite .icon12x13, .chemistry .icon { background-position: -385px -420px; }
@@ -204,8 +215,9 @@
 .sprite .icon14x13, .cognition .icon { background-position: -455px -420px; }
 .sprite .icon15x13, .logic .icon { background-position: -490px -420px; }
 
+.sprite .icon16x13, .academic > .icon { background-position: -280px -420px; }
+
 /* Sixth row */
-.sprite .icon9x14, .gardening .icon { background-position: -280px -455px !important; }
 .sprite .icon10x14, .cultivating .icon { background-position: -315px -455px; }
 .sprite .icon11x14, .planting .icon { background-position: -350px -455px; }
 .sprite .icon12x14, .watering .icon { background-position: -385px -455px; }
@@ -213,8 +225,9 @@
 .sprite .icon14x14, .harvesting .icon { background-position: -455px -455px; }
 .sprite .icon15x14, .processing .icon { background-position: -490px -455px; }
 
+.sprite .icon9x14, .gardening > .icon { background-position: -280px -455px; }
+
 /* Seventh row */
-.sprite .icon9x15, .monitoring .icon { background-position: -280px -490px !important; }
 .sprite .icon10x15, .analysis .icon { background-position: -315px -490px; }
 .sprite .icon11x15, .writing .icon { background-position: -350px -490px; }
 .sprite .icon12x15, .photography .icon { background-position: -385px -490px; }
@@ -222,8 +235,9 @@
 .sprite .icon14x15, .video .icon { background-position: -455px -490px; }
 .sprite .icon15x15, .presenting .icon { background-position: -490px -490px; }
 
+.sprite .icon9x15, .monitoring > .icon { background-position: -280px -490px; }
+
 /* Eighth row */
-.sprite .icon9x16, .care .icon { background-position: -280px -525px !important; }
 .sprite .icon10x16, .clothing .icon { background-position: -315px -525px; }
 .sprite .icon11x16, .hair .icon { background-position: -350px -525px; }
 .sprite .icon12x16, .shoes .icon { background-position: -385px -525px; }
@@ -231,8 +245,10 @@
 .sprite .icon14x16, .nutrition .icon { background-position: -455px -525px; }
 .sprite .icon15x16, .health .icon { background-position: -490px -525px; }
 
+.sprite .icon9x16, .care > .icon { background-position: -280px -525px; }
+
 /* Commons */
-.sprite .icon16x16, .commons .icon { background-position: -525px -525px; }
+.sprite .icon16x16, .commons > .icon { background-position: -525px -525px; }
 
 /* V. WHEN */
 
