--- a/0/theme/css/style.css
+++ b/0/theme/css/style.css
@@ -785,6 +785,10 @@ span.entity-large {
 	display: none !important;
 }
 
+.absolute {
+	position: absolute;
+}
+
 /***** OTHER GENERIC END *****/
 
 /***** FULL SCREEN START *****/
