--- a/0/theme/css/child.css
+++ b/0/theme/css/child.css
@@ -10,10 +10,17 @@ body { border: 1px solid #999; }
 
 .site-title, .site-description { color: #efefef; }
 
-.site-title { text-shadow: 2px -1px 2px #134f5c; }
+.site-title {
+	text-shadow: 2px -1px 2px #134f5c;
+	display: none;
+	}
 
-.site-description { text-shadow: 1px 1px 1px #134f5c; }
-/* faded sky blue */
+.site-description {
+	text-shadow: 1px 1px 1px #134f5c;
+	/* faded sky blue */
+	line-height: 1.3em;
+	font-size: 1.2em;
+}
 
 .site-header { border-bottom: 1px solid #999; }
 
