--- a/0/theme/css/sprite.css
+++ b/0/theme/css/sprite.css
@@ -259,14 +259,19 @@
 
 /* V. WHEN */
 
-.sprite .icon1x17, .clothing .icon { background-position: 0 -560px; }
-.sprite .icon2x17, .hair .icon { background-position: -35px -560px; }
-.sprite .icon3x17, .shoes .icon { background-position: -70px -560px; }
-.sprite .icon4x17, .physio .icon { background-position: -105px -560px; }
+.sprite .icon1x17, .day .icon { background-position: 0 -560px; }
+.sprite .icon2x17, .week .icon { background-position: -35px -560px; }
+.sprite .icon3x17, .month .icon { background-position: -70px -560px; }
+.sprite .icon4x17, .year .icon { background-position: -105px -560px; }
 
 .sprite .icon8x24, .when > .icon { background-position: -245px -805px; }
 
 /* VI. WHY */
+
+.sprite .icon9x17, .ethics .icon { background-position: -280px -560px; }
+.sprite .icon9x18, .religion .icon { background-position: -280px -595px; }
+.sprite .icon9x19, .sustainability .icon { background-position: -280px -630px; }
+.sprite .icon9x20, .motivation .icon { background-position: -280px -665px; }
 
 .sprite .icon16x24, .why > .icon { background-position: -525px -805px; }
 
