--- a/0/theme/css/child.css
+++ b/0/theme/css/child.css
@@ -43,8 +43,13 @@ body { border: 1px solid #999; }
 
 .alt .border { background: #ffd966; }
 
+article .unit .border {
+	border-width: 6px;
+	padding: 3px;
+}
+
 .unit .border {
-	border: #777 solid 4px;
+	border: #999 solid 4px;
 	box-shadow: 1px 1px 3px rgba(50, 50, 50, 1.0);
 }
 
@@ -53,6 +58,26 @@ body { border: 1px solid #999; }
 .boxes > .line > .unit > .inner { border: 1px solid #c8c8c8; }
 
 /*** COLOR END ***/
+
+/*** SECTION START ***/
+
+section .inner {
+	padding: 10px;
+}
+
+section.boxes {
+	margin-top: 15px;
+	border: 1px solid #aaa;
+	border-radius: 7px;
+}
+
+section.boxes h2 {
+	margin: 0;
+	margin-bottom: 10px;
+	padding-top: 0;
+}
+
+/*** SECTION END ***/
 
 /*** BOXES START ***/
 
